fix: removed the extra spacing between the chips in search and filter from vanilla example

--- a/scss/_patterns_search-and-filter.scss
+++ b/scss/_patterns_search-and-filter.scss
@@ -196,6 +196,7 @@
 
       &[aria-expanded='false'] {
         max-height: 5rem; // 2 rows of chips
+        font-size: 0;
       }
     }
 
